# InkClock

./: CODE_FIX_SUMMARY.md  CODE_REVIEW_REPORT.md  CODE_VALIDATION_REPORT.md  COMPREHENSIVE_FIX_PLAN.md  DETAILED_FIX_ALTERNATIVES.md  FINAL_SUMMARY.md  FIRMWARE_TEST_ENVIRONMENT_SETUP.md  MULTI_LANGUAGE_AUDIT_REPORT.md  QUICK_REFERENCE.md  README.md  README_EN.md  SIMPLE_TEST_SETUP.md  compile_output.txt  diy说明.md  readme.md  run_tests.bat  test_all_platforms.ps1  test_all_platforms_fixed.ps1  系统二次开发说明.md  软件 (D).lnk
code/: CMakeLists.txt  README.md  SIMULATION_GUIDE.md  auto_build_run.bat  build_simulator.bat  build_simulator_simple.bat  compile_pc_simulator.bat  compile_pc_simulator_fixed.bat  compile_temp.bat  compile_test.bat  platformio.ini  platformio_custom.ini  platformio_simple.ini  run_complete_simulator.bat  run_web_simulator.bat  simple_build.bat  test_basic.cpp
code/.pio/libdeps/esp32-c3-devkitc-02/Adafruit SI1145 Library/: .piopm
code/.pio/libdeps/esp32-wroom-32/SHT2x/examples/SHT2x_demo_ESP32/: SHT2x_demo_ESP32.ino
code/.pio/libdeps/esp32-wroom-32/SparkFun LPS25HB Pressure Sensor Library/: .piopm
code/.pio/libdeps/nodemcuv2/Adafruit TSL2561/: .piopm
code/.pio/libdeps/nodemcuv2/SHT2x/: .piopm
code/drivers/: README.md
code/src/: am2302_driver.cpp  am2302_driver.h  api_manager.cpp  api_manager.h  audio_manager.cpp  audio_manager.h  bh1750_driver.cpp  bluetooth_manager.cpp  bluetooth_manager.h  bme280_driver.cpp  bme280_driver.h  bme680_driver.cpp  button_manager.cpp  button_manager.h  camera_manager.cpp  camera_manager.h  config.h  dht22_driver.cpp  display_driver.h  display_manager.cpp  driver_registry.h  eink_display.cpp  eink_display.h  eink_driver.cpp  eink_driver.h  firmware_manager.cpp  firmware_manager.h  geo_manager.cpp  gy30_driver.cpp  hc_sr501_driver.cpp  hc_sr501_driver.h  ipv6_server.cpp  ipv6_server.h  ir_flame_driver.h  ld2410_driver.cpp  lps25hb_driver.h  lunar_manager.cpp  lunar_manager.h  main.cpp  main_simple.cpp  (+36 more)
code/src/app/: display_manager.cpp  display_manager.h  web_client.cpp  web_client.h  web_server.cpp  web_server.h
code/src/application/: api_manager.cpp  api_manager.h  display_manager.cpp  display_manager.h  feedback_manager.cpp  feedback_manager.h  geo_manager.cpp  geo_manager.h  lunar_manager.cpp  lunar_manager.h  message_manager.cpp  message_manager.h  power_manager.cpp  power_manager.h  scene_manager.cpp  scene_manager.h  sensor_manager.cpp  sensor_manager.h  stock_manager.cpp  stock_manager.h  time_manager.cpp  time_manager.h  weather_manager.cpp  weather_manager.h  web_client.cpp  web_client.h  web_server.cpp  web_server.h  wifi_manager.cpp  wifi_manager.h
code/src/core/: config.h  core_system.h  driver_registry.h  event_bus.h  font_manager.cpp  icore_system.h  tf_card_manager.h
code/src/coresystem/: arduino_compat.cpp  arduino_compat.h  base_plugin.h  config.h  config_manager.cpp  config_manager.h  core_system.cpp  core_system.h  data_types.h  dependency_injection.cpp  dependency_injection.h  driver_registry.h  error_handling.cpp  error_handling.h  event_bus.h  feature_manager.cpp  feature_manager.h  font_manager.cpp  font_manager.h  gxepd_colors.h  hardware_detector.cpp  hardware_detector.h  i18n_manager.cpp  i18n_manager.h  icore_system.h  memory_manager.cpp  memory_manager.h  memory_pool.cpp  memory_pool.h  module_registry.cpp  module_registry.h  network_manager.cpp  network_manager.h  performance_monitor.cpp  performance_monitor.h  platform_abstraction.cpp  platform_abstraction.h  plugin_manager.cpp  plugin_manager.h  power_manager.cpp  (+7 more)
code/src/drivers/: audio_driver.cpp  audio_driver.h
code/src/drivers/core/: driver_registry.h
code/src/drivers/displays/: display_driver.h  eink_display.cpp  eink_display.h  eink_driver.cpp  eink_driver.h
code/src/drivers/peripherals/: am2302_driver.cpp  am2302_driver.h  base_mq_sensor_driver.h  base_sensor_driver.cpp  base_sensor_driver.h  bh1750_driver.cpp  bh1750_driver.h  bme280_driver.cpp  bme280_driver.h  bme680_driver.cpp  bme680_driver.h  bmp388_driver.cpp  bmp388_driver.h  dht22_driver.cpp  dht22_driver.h  display_driver.h  eink_display.cpp  eink_display.h  eink_driver.cpp  eink_driver.h  gy30_driver.cpp  gy30_driver.h  hc_sr501_driver.cpp  hc_sr501_driver.h  hc_sr505_driver.cpp  hc_sr505_driver.h  hdc1080_driver.cpp  hdc1080_driver.h  htu21d_driver.cpp  htu21d_driver.h  ir_flame_driver.cpp  ir_flame_driver.h  ld2410_driver.cpp  ld2410_driver.h  lps25hb_driver.cpp  lps25hb_driver.h  mq135_driver.cpp  mq135_driver.h  mq2_driver.cpp  mq2_driver.h  (+27 more)
code/src/drivers/sensors/: base_sensor_driver.h  bme680_driver.h  bmp388_driver.cpp  gy30_driver.h  hc_sr505_driver.cpp  hc_sr505_driver.h  hdc1080_driver.cpp  htu21d_driver.cpp  htu21d_driver.h  mq2_driver.h  re200b_driver.cpp  sensor_driver.h  sht20_driver.cpp  sht40_driver.h  si1145_driver.h  tgs2600_driver.cpp  tsl2561_driver.cpp  tsl2561_driver.h
code/src/extensions/: plugin_manager.cpp  plugin_manager.h
code/src/modules/: lunar_manager.h  message_manager.h  sensor_manager.cpp  sensor_manager.h  stock_manager.cpp  stock_manager.h  weather_manager.cpp  weather_manager.h
code/src/plugins/: example_plugin.cpp  example_plugin.h
code/src/services/: api_manager.cpp  geo_manager.cpp  geo_manager.h  power_manager.cpp  power_manager.h  time_manager.cpp  time_manager.h  wifi_manager.h
code/src/simulator/: CMakeLists.txt  pc_simulator.cpp  pc_simulator_simple.cpp  simulator_main.cpp  web_simulator.html
code/src/simulator_simple/: main.cpp
code/src/simulator_simple_complete/: main.cpp
code/test/: README.md  platformio.ini
code/test/src/: test_time_manager.cpp
config/: firmware_config.json
dev/: development_hardware.md  开发硬件说明.md
doc/: Circuit Design Guide.md  产品需求文档.md  (+11 more)
test/: CMakeLists.txt  InkClockSimulator.spec  build_simulator.bat  displaywidget.cpp  displaywidget.h  inkclock_simulator.py  inkclockemulator.cpp  inkclockemulator.h  inkclocktypes.h  main.cpp  mockdisplay.cpp  mockdisplay.h  mockhardware.cpp  mockhardware.h  mocknetwork.cpp  mocknetwork.h  simulator.cpp  simulator.h  test_simulator.py
(+173 files in other folders)
